2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: fix
	  gtk_tree_model_iter_nth_child binding, fixes bug 514869

	* vapi/gtk+-2.0.vapi: regenerated

2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/parser.y, vala/scanner.l, vala/vala.h,
	  vala/valacodecontext.vala, vala/valacodegenerator.vala,
	  vala/valacodevisitor.vala, vala/valaenum.vala,
	  vala/valaerrorcode.vala, vala/valaerrordomain.vala,
	  vala/valaerrortype.vala, vala/valainterfacewriter.vala,
	  vala/valanamespace.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegenerator.vala, tests/exceptions.vala:

	  Separate errordomain from enum declaration, fixes bug 512616

2008-02-07  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: use 0 as array length when array
	  is a null literal

	* vapigen/valagidlparser.vala: add basic array length support

	* vapi/cairo.vapi: fix some array length parameters

	* vapi/atk.vapi, vapi/gconf-2.0.vapi, vapi/gdk-2.0.vapi,
	  vapi/gdk-pixbuf-2.0.vapi, vapi/gio-2.0.vapi,
	  vapi/gnome-desktop-2.0.vapi, vapi/gstreamer-0.10.vapi,
	  vapi/gstreamer-audio-0.10.vapi, vapi/gstreamer-check-0.10.vapi,
	  vapi/gstreamer-netbuffer-0.10.vapi, vapi/gtk+-2.0.vapi,
	  vapi/libgnome-2.0.vapi, vapi/libgnomeui-2.0.vapi, vapi/libnotify.vapi,
	  vapi/libsoup-2.2.vapi, vapi/libsoup-2.4.vapi, vapi/pango.vapi,
	  vapi/vte.vapi: regenerated

2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix some array length parameters

2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi, vapi/packages/gstreamer-0.10/:
	  vapi/packages/gtk+-2.0/: set array_length_pos for init methods

	* vapi/gstreamer-0.10.vapi, vapi/gtk+-2.0.vapi: regenerated

2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vala/valasignal.vala, vapigen/valagidlparser.vala: fix properties
	  and signals in vapigen

2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala, gobject/valaccodegenerator.vala,